# Protei_hw_1-2

./: .gitignore  CMakeLists.txt  configure_debug.sh  configure_release.sh  create_certificate.sh  main.cpp  readme.md  run.sh  run_consumer.sh  run_producer.sh  run_tests.sh
certificate/: CMakeLists.txt
certificate/includes/: certificate.h
certificate/src/: certificate.cpp
consumer/: CMakeLists.txt  main.cpp
fingerprint/: CMakeLists.txt
fingerprint/includes/: fingerprint.h
fingerprint/src/: fingerprint.cpp
fingerprint_emitter/: CMakeLists.txt
fingerprint_emitter/includes/: fingerprint_emitter.h
fingerprint_emitter/src/: fingerprint_emitter.cpp
fingerprint_reciever/: CMakeLists.txt
fingerprint_reciever/includes/: fingerprint_reciever.h
package/: CMakeLists.txt
package/includes/: package.h
package/src/: package.cpp
partner/: CMakeLists.txt
partner/includes/: partner.h
producer/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
